Feat: updated server code

--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "parle-chat-service",
+  "name": "chatcord",
   "version": "1.0.0",
-  "description": "Chat Service for the Parle App",
+  "description": "Realtime chat service with rooms",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "dev": "nodemon server"
   },
-  "keywords": [
-    "Chat"
-  ],
   "author": "Tony Cookey",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "@socket.io/redis-adapter": "^7.2.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "nodemon": "^2.0.19",
-    "redis": "^4.2.0",
-    "socket.io": "^4.5.1"
+    "@socket.io/redis-adapter": "^7.1.0",
+    "dotenv": "^14.3.2",
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "redis": "^4.0.2",
+    "socket.io": "^4.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
